--- a/fake_instagram/static/assets/css/style.css
+++ b/fake_instagram/static/assets/css/style.css
@@ -8,7 +8,7 @@
  
 
 body{
-  background-color: #B0B3B8!important;
+  background-color: #d1d3d6 !important;
 }
 
 /* ---------------------------------- */
