--- a/fake_instagram/templates/profile.html
+++ b/fake_instagram/templates/profile.html
@@ -27,7 +27,8 @@
 	<section>
 			<div class="feature-photo">
 				<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
-				<form>
+				<form action="/follow" method="POST">
+					{% csrf_token %}
 					<div class="add-btn">
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
 
@@ -36,10 +37,26 @@
 					{% else %}
 					<span style="color: white; font-size: 27px;"><b>{{user_post_length}} posts</b></span>
 					{% endif %}
-					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
-					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
-					<a href="" title="" data-ripple=""><button style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
-					
+
+					{% if user_followers_count < 2 %}
+					<span style="color: white; font-size: 27px;"><b>{{user_followers_count}} follower</b></span>
+					{% else %}
+					<span style="color: white; font-size: 27px;"><b>{{user_followers_count}} followers</b></span>
+					{% endif %}
+
+					<span style="color: white; font-size: 27px;"><b>{{user_following_count}} following</b></span>
+
+
+
+
+					<input type="hidden" name="follower" value="{{user.username}}">
+					<input type="hidden" name="user" value="{{user_object.username}}">
+
+					{% if user_object.username == user.username %}
+					{% comment %} <a href="/settings" data-ripple=""><button style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a> {% endcomment %}
+					{% else %}
+					<a data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{button_text}}</button></a>
+					{% endif %}
 					</div>
 				</form>
 
